<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1791CE">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5">

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@drawable/background_login_shape"
            android:layout_weight="1">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/titleAppName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/app_name"
                        android:textColor="#ffffff"
                        android:textSize="45sp"
                        />

                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:descendantFocusability="beforeDescendants"
                    android:focusableInTouchMode="true">

                    <EditText
                        android:id="@+id/editTextEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:ems="10"
                        android:textColor="#ffffff"
                        android:hint="@string/email"
                        android:textColorHint="#ffffff"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginTop="24dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:ems="10"
                        android:textColor="#ffffff"
                        android:hint="@string/password"
                        android:textColorHint="#ffffff"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="24dp"
                        android:id="@+id/ediTextPassword"/>
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/signup_button"
                            android:text="@string/signup"
                            android:onClick="openSignUpForm"
                            android:textColor="#e42b29"
                            android:textSize="14sp"
                            android:layout_centerVertical="true"
                            android:layout_width="80dp"
                            android:layout_height="36dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentEnd="true"
                            android:background="#1791CE"
                            style="@style/Widget.AppCompat.Button.Borderless" />


                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/login_button"
                            android:text="@string/login"
                            android:onClick="login"
                            android:textColor="#FFFFFF"
                            android:textSize="14sp"
                            android:layout_centerVertical="true"
                            android:layout_width="104dp"
                            android:layout_height="36dp"
                            android:background="@drawable/button_login_shape"
                            android:elevation="4dp" />

                    </RelativeLayout>

                </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3">

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3.5">

    </LinearLayout>

</LinearLayout>